[ums-15] 图片以及消息添加编辑

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -191,7 +191,7 @@
                                 </li>
                                 <li class="{{ tab_menu_histo }}"><a href="/purchasehistory"><i class="icon-basket-loaded"></i>{{ 'sidebar.admin.buy_histo'|trans }}</a>
                                 </li>
-                                <li class="{{ tab_menu_source }}"><a href="/tracking/data" class="has-arrow"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
+                                <li class="{{ tab_menu_source }}"><a href="/tracking/data"><i class="icon-plane"></i><span>{{ 'sidebar.menu.product_source'|trans }}</span></a>
                                 </li>
                             </ul>
                         </nav>
