--- a/templates/user/userList_users.html.twig
+++ b/templates/user/userList_users.html.twig
@@ -84,7 +84,7 @@
                                     {% for user in users %}
                                         <tr>
                                             <td class="text-left">
-                                                <span class="font-weight-bold">{{ user.firstname ~ " " ~ user.lastname }}</span>
+                                                <span class="font-weight-bold">{{ user.lastname ~ " " ~ user.firstname }}</span>
                                             </td>
                                             <td>{{ user.username }}</td>
                                             <td>
