--- a/assets/scss/customer/_customer.scss
+++ b/assets/scss/customer/_customer.scss
@@ -1,11 +1,11 @@
 @media screen and (min-width: 1199px) {
   #wrapper {
     .navbar-fixed-top {
-      top: 0 ;
+      top: 0;
     }
 
     #left-sidebar {
-      left: 0 ;
+      left: 0;
     }
   }
 }
@@ -19,9 +19,22 @@
 
 
     }
+
     .btn {
       color: $col-white !important;
     }
   }
 }
 
+.table-sales {
+  tr {
+    th.h, td.h {
+      width: 10%;
+    }
+  }
+
+  .progress {
+    height: 2rem !important;
+    font-size: 0.85rem !important;
+  }
+}
