[UMS-11]完成添加用户功能

--- a/templates/user/userList_admins.html.twig
+++ b/templates/user/userList_admins.html.twig
@@ -21,7 +21,7 @@
     <div id="popupBox" class="animated flipInY">
         <div id="popupContent">
             <div class="header">
-                <h2>{{ 'userList_pages.add_seller_admin'|trans }}</h2>
+                <h2>{{ 'userList_pages.add_user_seller_admin'|trans }}</h2>
             </div>
             <div class="body">
                 {{ form_start(form) }}
