--- a/templates/index/admin_index.html.twig
+++ b/templates/index/admin_index.html.twig
@@ -85,9 +85,9 @@
                         </thead>
                         <tbody>
                             {% for seller in sellers %}
-                                {% set pct_sales_month = (seller.sales_month / seller.sales_plan_month) * 100 %}
-                                {% set pct_sales_season = (seller.sales_season / seller.sales_plan_season) * 100 %}
-                                {% set pct_sales_year = (seller.sales_year / seller.sales_plan_year) * 100 %}
+                                {% set pct_sales_month = seller.sales_plan_month == 0 ? 0 : (seller.sales_month / seller.sales_plan_month) * 100 %}
+                                {% set pct_sales_season = seller.sales_plan_season == 0 ? 0 : (seller.sales_season / seller.sales_plan_season) * 100 %}
+                                {% set pct_sales_year = seller.sales_plan_year == 0 ? 0 : (seller.sales_year / seller.sales_plan_year) * 100 %}
                                 <tr>
                                     <td class="text-left h">
                                         <span class="font-weight-bold">{{ seller.lastname ~ " " ~ seller.firstname }}</span>
