--- a/templates/index/seller_index.html.twig
+++ b/templates/index/seller_index.html.twig
@@ -1,4 +1,25 @@
 {% trans_default_domain 'ums' %}
 
 {% block main_body %}
+    <div style="width: 800px; margin: 0 auto;">
+        <div class="card">
+            <div class="body">
+                <div class="row">
+                    <div class="col-7">
+                        <h5 class="m-t-0">{{ 'seller_index_page.task'|trans }}</h5>
+                        <small class="text-small">4% higher than last month</small>
+                    </div>
+                    <div class="col-5 text-right">
+                        <h2 class="m-b-0">78</h2>
+                        <small class="info">of 1Tb</small>
+                    </div>
+                    <div class="col-12">
+                        <div class="progress m-t-20">
+                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 78%;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
