--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
 {% endblock %}
 {% block sidebar %}
-    {% if role == 'Admin' or role == 'Seller' %}
+    {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') %}
         {% set tab_menu_index, tab_menu_profile, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "", "", "", "", "", "active", "", "active" %}
     {% endif %}
-    {% if role == 'User' %}
+    {% if is_granted('ROLE_SELLER') or is_granted('ROLE_USER') %}
         {% set tab_menu_index, tab_menu_profile, tab_menu_histo, tab_menu_source, tab_admin_users, tab_admin_sellers, tab_admin_admins, tab_admin_products, tab_admin_histo, nav_menu, nav_admin = "", "", "active", "", "", "", "", "", "", "active", "" %}
     {% endif %}
     {{ parent() }}
@@ -26,22 +26,22 @@
             </div>
             <div class="body">
                 {{ form_start(form) }}
-                <small class="text-muted">{{ form_label(form.user_phone) }} *</small>
-                <p>{{ form_widget(form.user_phone, {'attr': {'class': 'form-control'}}) }}</p>
+                <small class="text-muted">{{ form_label(form.user_id) }} *</small>
+                <p>{{ form_widget(form.user_id, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
                 <small class="text-muted">{{ form_label(form.product_id) }} *</small>
                 <p>{{ form_widget(form.product_id, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
-                <small class="text-muted">{{ form_label(form.date_purchase) }} *</small>
-                <p>{{ form_widget(form.date_purchase, {'attr': {'class': 'form-control'}}) }}</p>
+                <small class="text-muted">{{ form_label(form.purchase_time) }} *</small>
+                <p>{{ form_widget(form.purchase_time, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
-                <small class="text-muted">{{ form_label(form.purchase_tracking_id) }} *</small>
-                <p>{{ form_widget(form.purchase_tracking_id, {'attr': {'class': 'form-control'}}) }}</p>
+                <small class="text-muted">{{ form_label(form.tracking_id) }} *</small>
+                <p>{{ form_widget(form.tracking_id, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
-                <small class="text-muted">{{ form_label(form.quantity) }}</small>
-                <p>{{ form_widget(form.quantity, {'attr': {'class': 'form-control'}}) }}</p>
+                <small class="text-muted">{{ form_label(form.seller_id) }}</small>
+                <p>{{ form_widget(form.seller_id, {'attr': {'class': 'form-control'}}) }}</p>
                 <div class="text-center">
-                    <input type="submit" class="btn btn-primary" value="{{ 'purchase_page.btn'|trans }}">&nbsp;&nbsp;
+                    <input type="submit" class="btn btn-primary" value="{{ 'purchase_page.btn'|trans }}">
                     <a href="javascript:void(0)" id="popupCancel" class="btn btn-default">{{ 'purchase_page.return'|trans }}</a>
                 </div>
                 {{ form_end(form) }}
@@ -50,6 +50,41 @@
     </div>
     <div id="main-content">
         <div class="container-fluid">
+            <div class="block-header">
+                <div class="row">
+                    <div class="col-lg-6 col-md-8 col-sm-12">
+                        <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
+                                        class="fa fa-arrow-left"></i></a>{{ 'purchase_page.title'|trans }}</h2>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
+                            <li class="breadcrumb-item active">{{ 'purchase_page.title'|trans }}</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-12 text-right">
+                        <div class="bh_chart hidden-xs">
+                            <div class="float-left m-r-15">
+                                <small>Visitors</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
+                            </div>
+                            <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Visits</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
+                            </div>
+                            <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Chats</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
+                            </div>
+                            <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row clearfix">
                 <div class="col-lg-12">
                     <div class="card">
@@ -63,22 +98,22 @@
                                     <thead>
                                     <tr>
                                         <th>{{ 'purchase_page.purchase_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.phone'|trans }}</th>
+                                        <th>{{ 'purchase_page.user_id'|trans }}</th>
                                         <th>{{ 'purchase_page.product_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.date_purchase'|trans }}</th>
-                                        <th>{{ 'purchase_page.purchase_tracking_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.quantity'|trans }}</th>
+                                        <th>{{ 'purchase_page.purchase_time'|trans }}</th>
+                                        <th>{{ 'purchase_page.tracking_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.seller_id'|trans }}</th>
                                         <th>{{ 'purchase_page.activity'|trans }}</th>
                                     </tr>
                                     </thead>
                                     <tfoot>
                                     <tr>
                                         <th>{{ 'purchase_page.purchase_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.phone'|trans }}</th>
+                                        <th>{{ 'purchase_page.user_id'|trans }}</th>
                                         <th>{{ 'purchase_page.product_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.date_purchase'|trans }}</th>
-                                        <th>{{ 'purchase_page.purchase_tracking_id'|trans }}</th>
-                                        <th>{{ 'purchase_page.quantity'|trans }}</th>
+                                        <th>{{ 'purchase_page.purchase_time'|trans }}</th>
+                                        <th>{{ 'purchase_page.tracking_id'|trans }}</th>
+                                        <th>{{ 'purchase_page.seller_id'|trans }}</th>
                                         <th>{{ 'purchase_page.activity'|trans }}</th>
                                     </tr>
                                     </tfoot>
@@ -86,11 +121,11 @@
                                     {% for p in purchase %}
                                         <tr class="gradeA">
                                             <td>{{ p.PurchaseId }}</td>
-                                            <td>{{ p.UserPhone }}</td>
+                                            <td>{{ p.UserId }}</td>
                                             <td>{{ p.ProductId }}</td>
-                                            <td>{{ p.DatePurchase|date('Y-m-d') }}</td>
-                                            <td>{{ p.PurchaseTrackingId }}</td>
-                                            <td>{{ p.Quantity }}</td>
+                                            <td>{{ p.PurchaseTime|date('Y-m-d') }}</td>
+                                            <td>{{ p.TrackingId }}</td>
+                                            <td>{{ p.SellerId }}</td>
                                             <td class="actions">
                                                 <a class="btn btn-info modify_btn">
                                                     <i class="fa fa-edit"></i>
@@ -127,13 +162,13 @@
         $('#addRow').click(function () {
             $('#purchase_form_title').text('{{ 'purchase_page.register'|trans }}');
             $('#purchase_purchase_id').val('');
-            $('#purchase_user_phone').val('');
+            $('#purchase_user_id').val('');
             $('#purchase_product_id').val('');
-            $('#purchase_purchase_tracking_id').val('');
-            $('#purchase_quantity').val('');
-            $('#purchase_date_purchase select').each(function (i) {
+            $('#purchase_tracking_id').val('');
+            $('#purchase_purchase_time select').each(function (i) {
                 $(this).find('option:first-child').attr('selected', true);
             });
+            $('#purchase_seller_id').val('');
             $('#overlay').fadeIn('fast');
             $('#popupBox').fadeIn('fast');
             $('#popupContent').fadeIn('fast');
@@ -148,7 +183,7 @@
         {% if not user_existance %}
             swal({
                 title: "出错啦",
-                text: "该手机号不存在",
+                text: "该用户不存在",
                 type: "error"
             });
             $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
@@ -163,15 +198,23 @@
             $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
         {% endif %}
 
-        {% if not purchase_existance %}
+        {% if not seller_existance %}
             swal({
                 title: "出错啦",
-                text: "该购买记录不存在",
+                text: "销售员不存在",
                 type: "error"
             });
             $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
         {% endif %}
 
+        {% if not tracking_existance %}
+            swal({
+                title: "出错啦",
+                text: "溯源记录不存在",
+                type: "error"
+            });
+            $('.sweet-alert p').attr('style', 'display:block;color:#de4848');
+        {% endif %}
 
         $('.modify_btn').click(function (e) {
             data = {"purchase_id": $('td:first-child', $(e.target).parents('tr')).text()};
@@ -183,16 +226,16 @@
                 success: function (purchaseHistory) {
                     $('#purchase_purchase_id').val(purchaseHistory['purchase_id']);
                     $('#purchase_form_title').text('{{ 'purchase_page.modify'|trans }}');
-                    $('#purchase_user_phone').val(purchaseHistory['user_phone']);
+                    $('#purchase_user_id').val(purchaseHistory['user_id']);
                     $('#purchase_product_id').val(purchaseHistory['product_id']);
-                    $('#purchase_purchase_tracking_id').val(purchaseHistory['purchase_tracking_id']);
-                    $('#purchase_quantity').val(purchaseHistory['quantity']);
-                    $date_time = purchaseHistory['date_purchase'].split('-');
-                    $('#purchase_date_purchase select').each(function (i) {
+                    $('#purchase_tracking_id').val(purchaseHistory['tracking_id']);
+                    $date_time = purchaseHistory['purchase_time'].split('-');
+                    $('#purchase_purchase_time select').each(function (i) {
                         $(this).find('option').filter(function () {
                             return parseInt($(this).text()) === parseInt($date_time[i]);
                         }).attr('selected', true);
                     });
+                    $('#purchase_seller_id').val(purchaseHistory['seller_id']);
                     $('#overlay').fadeIn('fast');
                     $('#popupBox').fadeIn('fast');
                     $('#popupContent').fadeIn('fast');
