[BUGFIX]用户首页溯源信息错误修正，删除首页溯源编辑按钮

--- a/templates/tracking/show.html.twig
+++ b/templates/tracking/show.html.twig
@@ -176,7 +176,7 @@
     <script src="{{ asset('vendor/sweetalert/sweetalert.min.js') }}"></script>
     <script src="{{ asset('js/pages/tables/jquery-datatable.js') }}"></script>
     <script>
-        $('#addRow').click(function () {
+        $('#modify_button').click(function () {
             $('#overlay').fadeIn('fast');
             $('#popupBox').fadeIn('fast');
             $('#popupContent').fadeIn('fast');
