[UMS-5]销售员首页设计初版

--- a/templates/index/admin_index.html.twig
+++ b/templates/index/admin_index.html.twig
@@ -94,21 +94,21 @@
                                     </td>
                                     <td>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{pct_sales_month|round(1,'ceil')}}%;">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" style="width: {{pct_sales_month|round(1,'ceil')}}%;">
                                                 <span>{{pct_sales_month|round(1,'ceil')}}% 完成</span>
                                             </div>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{pct_sales_season|round(1,'ceil')}}%;">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" style="width: {{pct_sales_season|round(1,'ceil')}}%;">
                                                 <span>{{pct_sales_season|round(1,'ceil')}}% 完成</span>
                                             </div>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="progress">
-                                            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: {{pct_sales_year|round(1,'ceil')}}%;">
+                                            <div class="progress-bar progress-bar-info" role="progressbar" style="width: {{pct_sales_year|round(1,'ceil')}}%;">
                                                 <span>{{pct_sales_year|round(1,'ceil')}}% 完成</span>
                                             </div>
                                         </div>
