--- a/templates/index/seller_index.html.twig
+++ b/templates/index/seller_index.html.twig
@@ -1,23 +1,160 @@
 {% trans_default_domain 'ums' %}
 
 {% block main_body %}
-    <div style="width: 800px; margin: 0 auto;">
+    <div style="width: 1000px; margin: 0 auto;">
         <div class="card">
             <div class="body">
                 <div class="row">
                     <div class="col-7">
                         <h5 class="m-t-0">{{ 'seller_index_page.task'|trans }}</h5>
-                        <small class="text-small">4% higher than last month</small>
-                    </div>
-                    <div class="col-5 text-right">
-                        <h2 class="m-b-0">78</h2>
-                        <small class="info">of 1Tb</small>
+                        <!--<small class="text-small">4% higher than last month</small>!-->
                     </div>
                     <div class="col-12">
-                        <div class="progress m-t-20">
-                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="78" aria-valuemin="0" aria-valuemax="100" style="width: 78%;"></div>
+                        <ul class="nav nav-tabs-new" style="margin-top: 20px">
+                            <li class="nav-item" style="margin-left: 10px; margin-right: 10px">
+                                <a class="nav-link active show" data-toggle="tab" href="#task_month">{{ 'seller_index_page.by_month'|trans }}</a>
+                            </li>
+                            <li class="nav-item" style="margin-left: 10px; margin-right: 10px">
+                                <a class="nav-link" data-toggle="tab" href="#task_season">{{ 'seller_index_page.by_season'|trans }}</a>
+                            </li>
+                            <li class="nav-item" style="margin-left: 10px; margin-right: 10px">
+                                <a class="nav-link" data-toggle="tab" href="#task_year">{{ 'seller_index_page.by_year'|trans }}</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane active show" id="task_month">
+                                <div style="margin-top: 20px">
+                                    <h5 class="m-b-0">{{ 'seller_index_page.current_month_accompished'|trans }} : {{ seller.sales_month }}</h5>
+                                    <small class="info">{{ 'seller_index_page.current_month_plan'|trans }} : {{ seller.sales_plan_month }}</small>
+                                </div>
+                                <div class="progress m-t-20">
+                                    {% set pct_sales_month = seller.sales_plan_month == 0 ? 0 : (seller.sales_month / seller.sales_plan_month) * 100 %}
+                                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{pct_sales_month|round(1,'ceil')}}%;">
+                                        <span style="color: black">{{pct_sales_month|round(1,'ceil')}}% 完成</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="task_season">
+                                <div style="margin-top: 20px">
+                                    <h5 class="m-b-0">{{ 'seller_index_page.current_season_accompished'|trans }} : {{ seller.sales_season }}</h5>
+                                    <small class="info">{{ 'seller_index_page.current_season_plan'|trans }} : {{ seller.sales_plan_season }}</small>
+                                </div>
+                                <div class="progress m-t-20">
+                                    {% set pct_sales_season = seller.sales_plan_season == 0 ? 0 : (seller.sales_season / seller.sales_plan_season) * 100 %}
+                                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{pct_sales_season|round(1,'ceil')}}%;">
+                                        <span style="color: black">{{pct_sales_season|round(1,'ceil')}}% 完成</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="task_year">
+                                <div style="margin-top: 20px">
+                                    <h5 class="m-b-0">{{ 'seller_index_page.current_year_accompished'|trans }} : {{ seller.sales_year }}</h5>
+                                    <small class="info">{{ 'seller_index_page.current_year_plan'|trans }} : {{ seller.sales_plan_year }}</small>
+                                </div>
+                                <div class="progress m-t-20">
+                                    {% set pct_sales_year = seller.sales_plan_year == 0 ? 0 : (seller.sales_year / seller.sales_plan_year) * 100 %}
+                                    <div class="progress-bar progress-bar-success" role="progressbar" style="width: {{pct_sales_year|round(1,'ceil')}}%;">
+                                        <span style="color: black">{{pct_sales_year|round(1,'ceil')}}% 完成</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="body">
+                <div class="col-7" style="margin-bottom: 30px; margin-left: -15px">
+                    <h5 class="m-t-0">{{ 'seller_index_page.engage'|trans }}</h5>
+                    <!--<small class="text-small">4% higher than last month</small>!-->
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
+                        <thead>
+                        <tr>
+                            <th class="text-left">{{ 'user_infos.name'|trans }}</th>
+                            <th>{{ 'user_infos.sex.title'|trans }}</th>
+                            <th>{{ 'user_infos.user_id'|trans }}</th>
+                            <th>{{ 'user_infos.phone'|trans }}</th>
+                            <th>{{ 'user_infos.wechat'|trans }}</th>
+                            <th>{{ 'user_infos.address'|trans }}</th>
+                            <th>{{ 'user_infos.region'|trans }}</th>
+                            <th>{{ 'user_infos.date_register'|trans }}</th>
+                            <th>{{ 'seller_index_page.engage_action'|trans }}</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for user in users %}
+                            <tr>
+                                <td class="text-left">
+                                    <span class="font-weight-bold">{{ user.lastname ~ " " ~ user.firstname }}</span>
+                                </td>
+                                <td>
+                                    {% if user.sex %}{% set user_sex = 'user_infos.sex.' ~ user.sex %}
+                                    {% else %}{% set user_sex = 'user_infos.sex.0' %}{% endif %}
+                                    {{ user_sex|trans }}
+                                </td>
+                                <td>{{ user.user_id }}</td>
+                                <td>{{ user.phone }}</td>
+                                <td>{{ user.wechat }}</td>
+                                <td>{{ user.address }}</td>
+                                <td>
+                                    {% set user_region = 'region.'~user.region %}
+                                    {{ user_region|trans }}
+                                </td>
+                                <td>{{ user.date_register|date('Y年m月d日') }}</td>
+                                <td>
+                                    <a href="javascript:void(0)" class="engage btn btn-info">
+                                        {{ 'seller_index_page.engage_action'|trans }}
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="body">
+                <div class="col-7" style="margin-bottom: 30px; margin-left: -15px">
+                    <h5 class="m-t-0">{{ 'seller_index_page.engaged_user'|trans }}</h5>
+                    <!--<small class="text-small">4% higher than last month</small>!-->
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
+                        <thead>
+                        <tr>
+                            <th class="text-left">{{ 'user_infos.name'|trans }}</th>
+                            <th>{{ 'user_infos.sex.title'|trans }}</th>
+                            <th>{{ 'user_infos.user_id'|trans }}</th>
+                            <th>{{ 'user_infos.phone'|trans }}</th>
+                            <th>{{ 'user_infos.wechat'|trans }}</th>
+                            <th>{{ 'user_infos.address'|trans }}</th>
+                            <th>{{ 'user_infos.date_register'|trans }}</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for user in engaged_users %}
+                            <tr>
+                                <td class="text-left">
+                                    <span class="font-weight-bold">{{ user.lastname ~ " " ~ user.firstname }}</span>
+                                </td>
+                                <td>
+                                    {% if user.sex %}{% set user_sex = 'user_infos.sex.' ~ user.sex %}
+                                    {% else %}{% set user_sex = 'user_infos.sex.0' %}{% endif %}
+                                    {{ user_sex|trans }}
+                                </td>
+                                <td>{{ user.user_id }}</td>
+                                <td>{{ user.phone }}</td>
+                                <td>{{ user.wechat }}</td>
+                                <td>{{ user.address }}</td>
+                                <td>{{ user.date_register|date('Y年m月d日') }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
